rebrand-hero-banner: updated css for requested css fixes, issue with section height in ipad mobile and text alignment in mobile view

--- a/content-types/current/hero-banner/css/main.css
+++ b/content-types/current/hero-banner/css/main.css
@@ -105,8 +105,13 @@
 }
 /* END */
 
+.hero-banner.two-column {
+  height: 500px;
+}
+
 .hero-banner.two-column .hero-banner__wrapper {
   display: flex;
+  height: 100% !important;
 }
 
 .hero-banner.two-column .hero-banner__wrapper .col-lg-6 {
