--- a/content-types/current/hero-banner/css/mobile.css
+++ b/content-types/current/hero-banner/css/mobile.css
@@ -86,7 +86,7 @@
 } */
 
 @media only screen and (max-width: 1199px) {
-  .hero-banner.two-column .hero-banner__wrapper {
+  .hero-banner.two-column {
     height: 350px;
   }
 
@@ -95,8 +95,8 @@
   }
 
   .hero-banner.two-column .hero-banner__wrapper .col-lg-6.text-column .hero-banner__block__title span {
-    font-size: 3rem !important;
-    line-height: 2.5rem !important;
+    font-size: 3.5rem !important;
+    line-height: 3rem !important;
     padding: 0 !important;
   }
 
@@ -111,12 +111,13 @@
 }
 
 @media only screen and (max-width: 883px) {
-  .hero-banner.fordham-rebrand .hero-banner__wrapper {
+  .hero-banner.two-column {
     height: 300px;
   }
+
   .hero-banner.two-column .hero-banner__wrapper .col-lg-6.text-column .hero-banner__block__title span {
-    font-size: 2.5rem !important;
-    line-height: 2rem !important;
+    font-size: 2.7rem !important;
+    line-height: 2.2rem !important;
     padding: 0 !important;
   }
 }
